compiler-core/src/parse/snapshots/rakun_core__parse__tests__incomplete_function.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 615
expression: fn()
---
----- SOURCE CODE
fn()

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:1:1
  │
1 │ fn()
  │ ^^^^ This function does not have a body
